test/asm-istiod-15/cluster/cluster.yaml
apiVersion: identity.cnrm.cloud.google.com/v1alpha2
kind: IdentityNamespace
metadata:
  name: default
  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
spec: {}
---
apiVersion: container.cnrm.cloud.google.com/v1alpha2
kind: ContainerCluster
metadata:
  clusterName: "[PROJECT_ID]/us-central1-c/asm-free-trial" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"gcloud.core.project","value":"[PROJECT_ID]"},{"name":"cluster-name","value":"asm-free-trial"},{"name":"gcloud.compute.zone","value":"us-central1-c"}]}}
  name: asm-free-trial-15 # {"type":"string","x-kustomize":{"setter":{"name":"cluster-name","value":"asm-free-trial"}}}
  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
spec:
  location: us-central1-c # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.compute.zone"}}}
  workloadIdentity:
    identityNamespace: default
  labels:
    mesh_id: "[PROJECT_ID]_us-central1-c_asm-free-trial" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"gcloud.core.project","value":"[PROJECT_ID]"},{"name":"cluster-name","value":"asm-free-trial"},{"name":"gcloud.compute.zone","value":"us-central1-c"}]}}
  loggingService: logging.googleapis.com/kubernetes
  monitoringService: monitoring.googleapis.com/kubernetes
  addonsConfig:
    horizontalPodAutoscaling:
      disabled: false
    httpLoadBalancing:
      disabled: false
    cloudrunConfig:
      disabled: true # {"type":"boolean","x-kustomize":{"setter":{"name":"cloud-run-disabled","value":"true"}}}
  ipAllocationPolicy:
    useIpAliases: true
  masterAuth:
    username: admin
  network: default
  minMasterVersion: "1.14.10-gke.17"
